Explore view: smaller maximum width
The Explore view currently has a very wide maximum column width (more than 1400px). This means that the banners have to scale across a very wide range of aspect ratios (and currently many banners don't work well at that very wide size).
The wide size also makes the featured app rows look a bit odd, because each of them is a single, very long row.
I'd propose having a narrower maximum width like in other apps (as well as the list views in Software), somewhere around 700-1000px, perhaps using HdyColumn for smooth max width scaling.