Overview: constrain maximum width with HdyClamp

(Updated by Philip Withnall to call `hdy_init()` correctly for
libhandy-1.)

Fixes: https://gitlab.gnome.org/GNOME/gnome-software/issues/890