src/gs-overview-page.c
@@ -10,6 +10,7 @@
 #include "config.h"
 
 #include <glib/gi18n.h>
+#include <handy.h>
 #include <math.h>
 
 #include "gs-shell.h"
